--- a/index.html
+++ b/index.html
@@ -2,25 +2,47 @@
 layout: page
 title: Zeropio's Site
 ---
-{% for post in site.posts  %}
-    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 
-    {% if forloop.first %}
-        <h2 class="c-archives__year" id="{{ this_year }}-ref">{{this_year}}</h2>
-        <ul class="c-archives__list">
-    {% endif %}
-        <li class="c-archives__item">
-            <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
-            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-        </li>
-    {% if forloop.last %}
-        </ul>
-    {% else %}
-        {% if this_year != next_year %}
-        </ul>
-        <h2 class="c-archives__year" id="{{ next_year }}-ref">{{next_year}}</h2>
-        <ul class="c-archives__list">
-        {% endif %}
-    {% endif %}
-{% endfor %}
+<div class="container">
+    <img align="right" alt="GIF" src="./bg/tvhead.gif" width="400" height="350" />
+    <h1>
+      Hey there
+      <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" />
+    </h1>
+
+    <div id="badges">
+      <a href="https://www.linkedin.com/in/emilio-s%C3%A1nchez-garc%C3%ADa/">
+        <img src="https://img.shields.io/badge/LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white"
+          alt="LinkedIn Badge" />
+      </a>
+      <a href="https://github.com/zeropio">
+        <img src="https://img.shields.io/badge/Github-black?style=for-the-badge&logo=github&logoColor=white"
+          alt="Github Badge" />
+      </a>
+      <a href="https://twitter.com/0xZeropio">
+        <img src="https://img.shields.io/badge/Twitter-blue?style=for-the-badge&logo=twitter&logoColor=white"
+          alt="Twitter Badge" />
+      </a>
+    </div>
+    <hr />
+
+    - 👉 Junior pentester, CTF enjoyer, future secadmin(?);<br />
+    - 💬 Ask me about anything, I am happy to learn;<br />
+    - 📫 How to reach me: <b><a href="mailto: zeropio@pm.me">zeropio@pm.me</a></b>;
+
+    <br>
+    <hr />
+    <br>
+
+    <b>👨‍💻 Languages and Tools:</b>
+    <br>
+    <div class="container">
+      <img height="45" src="./bg/scripting.png" />
+      <img height="40" src="./bg/metasploit.png" />
+      <img height="35" src="./bg/python.png" />
+      <img height="40" src="./bg/tux.png" />
+      <img height="40" src="./bg/docker.png" />
+      <img height="35" src="./bg/burpsuite.png" />
+      <img height="40" src="./bg/node.png" />
+    </div>
+  </div>
